[fix] Fixed alignment of the close button of the selection bar

--- a/src/styles/selectionbar.styl
+++ b/src/styles/selectionbar.styl
@@ -46,9 +46,7 @@ slate-grey = #5d6165
     &.fil-action-close
       background embedurl("../assets/icons/icon-cross.svg") em(24px) center no-repeat
       text-indent -9999px
-      position absolute
-      top em(8px)
-      right 0
+      margin-left auto
 
 @media (max-width: (1023/basefont)rem)
   .fil-selectionbar
